--- a/ischedule/ischedule.csproj
+++ b/ischedule/ischedule.csproj
@@ -14,14 +14,10 @@
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -48,18 +44,20 @@
   <ItemGroup>
     <Reference Include="DevComponents.DotNetBar2, Version=9.5.0.1, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\SharedLib\DevComponents.DotNetBar2.dll</HintPath>
+      <HintPath>LibraryProject\DevComponents.DotNetBar2.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="FISCA.Authentication">
-      <HintPath>..\SharedLib\FISCA.Authentication.dll</HintPath>
+      <HintPath>LibraryProject\FISCA.Authentication.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="FISCA.Core, Version=1.0.1.3, Culture=neutral, PublicKeyToken=a269f410f9e2a287, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\SharedLib\FISCA.Core.dll</HintPath>
+      <HintPath>..\Sunset\LibraryProject\FISCA.Core.dll</HintPath>
     </Reference>
     <Reference Include="FISCA.Deployment, Version=1.0.0.13, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\SharedLib\FISCA.Deployment.dll</HintPath>
+      <HintPath>..\Sunset\LibraryProject\FISCA.Deployment.dll</HintPath>
     </Reference>
     <Reference Include="FISCA.DSAClient">
       <HintPath>LibraryProject\FISCA.DSAClient.dll</HintPath>
@@ -332,6 +330,16 @@
     <None Include="Resources\lock.gif" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Sunset\Sunset.Data.Integration\Sunset.Data.Integration.csproj">
+      <Project>{FE668DA3-B2D4-417D-985E-3703C6FC78D2}</Project>
+      <Name>Sunset.Data.Integration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sunset\Sunset.Data\Sunset.Data.csproj">
+      <Project>{60CB6BBF-9147-4117-9053-DB3ACCBAACB2}</Project>
+      <Name>Sunset.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Resources\上載.png" />
   </ItemGroup>
   <ItemGroup>
@@ -446,16 +454,6 @@
     <None Include="Resources\回復至未排課72.png" />
     <None Include="Resources\列印.png" />
     <None Include="Resources\代課查詢.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Sunset.Data.Integration\Sunset.Data.Integration.csproj">
-      <Project>{fe668da3-b2d4-417d-985e-3703c6fc78d2}</Project>
-      <Name>Sunset.Data.Integration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Sunset.Data\Sunset.Data.csproj">
-      <Project>{60cb6bbf-9147-4117-9053-db3accbaacb2}</Project>
-      <Name>Sunset.Data</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
