--- a/ischedule/ischedule.csproj
+++ b/ischedule/ischedule.csproj
@@ -58,10 +58,7 @@
     <Reference Include="FISCA.Core, Version=1.0.1.3, Culture=neutral, PublicKeyToken=a269f410f9e2a287, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\SharedLib\FISCA.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="FISCA.Deployment, Version=1.0.0.13, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\SharedLib\FISCA.Deployment.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="FISCA.DSAClient">
       <HintPath>..\SharedLib\FISCA.DSAClient.dll</HintPath>
@@ -337,10 +334,12 @@
     <ProjectReference Include="..\Sunset.Data.Integration\Sunset.Data.Integration.csproj">
       <Project>{FE668DA3-B2D4-417D-985E-3703C6FC78D2}</Project>
       <Name>Sunset.Data.Integration</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Sunset.Data\Sunset.Data.csproj">
       <Project>{60CB6BBF-9147-4117-9053-DB3ACCBAACB2}</Project>
       <Name>Sunset.Data</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
