實作及測試場地多容納數課程。

--- a/ischedule/ischedule.csproj
+++ b/ischedule/ischedule.csproj
@@ -242,6 +242,9 @@
     <EmbeddedResource Include="Common\BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmEventSelector.resx">
+      <DependentUpon>frmEventSelector.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmUploadConfirm.resx">
       <DependentUpon>frmUploadConfirm.cs</DependentUpon>
     </EmbeddedResource>
