將自動排課改為舊的方式，不用亂數。

--- a/ischedule/ischedule.csproj
+++ b/ischedule/ischedule.csproj
@@ -51,6 +51,10 @@
       <HintPath>LibraryProject\DevComponents.DotNetBar2.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FISCA">
+      <HintPath>..\SharedLib\FISCA.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FISCA.Authentication">
       <HintPath>..\SharedLib\FISCA.Authentication.dll</HintPath>
       <Private>True</Private>
