--- a/ischedule/ischedule.csproj
+++ b/ischedule/ischedule.csproj
@@ -49,9 +49,6 @@
     <Reference Include="Aspose.Cells">
       <HintPath>..\SharedLib\Aspose.Cells.dll</HintPath>
     </Reference>
-    <Reference Include="Campus.Report">
-      <HintPath>..\SharedLib\Campus.Report.dll</HintPath>
-    </Reference>
     <Reference Include="DevComponents.DotNetBar2, Version=9.5.0.1, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>LibraryProject\DevComponents.DotNetBar2.dll</HintPath>
@@ -113,6 +110,7 @@
       <DependentUpon>frmReport.cs</DependentUpon>
     </Compile>
     <Compile Include="Report\LPViewReportItem.cs" />
+    <Compile Include="Report\ReportSaver.cs" />
     <Compile Include="test\DecPeriod.cs" />
     <Compile Include="test\DecScheduler.cs" />
     <Compile Include="test\frmTest.cs">
