--- a/ischedule/ischedule.csproj
+++ b/ischedule/ischedule.csproj
@@ -90,6 +90,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandPattern\ICommand.cs" />
+    <Compile Include="CommandPattern\LockEventCommand.cs" />
+    <Compile Include="CommandPattern\UnlockEventCommand.cs" />
     <Compile Include="Common\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -521,6 +524,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ischedule_logo.ico" />
+    <None Include="Resources\Undo-icon.png" />
+    <None Include="Resources\Redo-icon.png" />
     <None Include="Resources\biology_remove_128.png" />
     <None Include="Resources\ImageClock.png" />
     <None Include="Resources\刪除.png" />
