將鎖定/解除鎖定改為批次功能。

--- a/ischedule/ischedule.csproj
+++ b/ischedule/ischedule.csproj
@@ -90,6 +90,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandPattern\FreeEventCommand.cs" />
     <Compile Include="CommandPattern\ICommand.cs" />
     <Compile Include="CommandPattern\LockEventCommand.cs" />
     <Compile Include="CommandPattern\UnlockEventCommand.cs" />
