--- a/ischedule/app.config
+++ b/ischedule/app.config
@@ -1,3 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <probing privatePath="kernel;components"/>
+        </assemblyBinding>
+        <loadFromRemoteSources  enabled="true"/>
+    </runtime>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    </startup>
+</configuration>
